# phiny

./: Cargo.toml  README.md
.github/workflows/: release.yml
phiny-cli/: Cargo.toml
phiny-cli/src/: main.rs
phiny-core/: Cargo.toml
phiny-core/src/: lib.rs
phiny-core/src/audio/: input_device.rs  mod.rs  output_device.rs
phiny-core/src/audio/io/: input_device.rs  output_device.rs
phiny-core/src/audio/processing/: decoder.rs  encoder.rs  jitter_buffer.rs  mod.rs  processor.rs
phiny-core/src/p2p/: connection.rs  connector.rs  listener.rs  mod.rs  peer.rs  ticket.rs
phiny-server/: Cargo.toml
