[package]
name = "phiny"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["phiny-cli","phiny-core","phiny-server"]


[[bin]]
name = "phiny"
path = "phiny-cli/main.rs"

[[bin]]
name = "phiny-server"
path = "phiny-server/main.rs"




[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
