[package]
name = "phiny-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
phiny-core= {version="0.1.0",path="../phiny-core"}
tokio= {workspace=true}
anyhow={workspace=true}
log={workspace=true}
env_logger={workspace=true}
clap = { version = "4.5.49", features = ["derive"] }
bytemuck = "1.24.0"
