[package]
name = "phiny-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
phiny-core = { version = "0.1.0", path = "../phiny-core" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5.49", features = ["derive"] }
bytemuck = "1.24.0"
bincode = "2.0.1"


