[package]
name = "phiny-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cpal = "0.16.0"
iroh = "0.93.2"
tokio = { version = "1.48.0", features = ["full"] }
log={workspace=true}
env_logger={workspace=true}
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
data-encoding = "2.9.0"
